<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title_portfolio">My Portfolio Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone : My Own App</string>
    <string name="launch_message">This button will launch</string>

</resources>
