<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:background="@color/main_background"
    tools:context=".MainActivity">



    <TextView android:text="@string/title_portfolio" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="@color/font_title"
        android:textSize="35sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:scrollbarFadeDuration="10"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/buttons_horizontal_margin"
            android:paddingRight="@dimen/buttons_horizontal_margin"
            android:paddingTop="@dimen/activity_top_margin"
            android:paddingBottom="@dimen/activity_bottom_margin"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer"
                android:id="@+id/button_spotify"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                android:layout_marginBottom="@dimen/buttons_margin_bottom"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app"
                android:id="@+id/button_library"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                android:layout_marginBottom="@dimen/buttons_margin_bottom"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app"
                android:id="@+id/button_scores"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                android:layout_marginBottom="@dimen/buttons_margin_bottom"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger"
                android:id="@+id/button_bigger"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                android:layout_marginBottom="@dimen/buttons_margin_bottom"
                />
            .
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader"
                android:id="@+id/button_xyz"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                android:layout_marginBottom="@dimen/buttons_margin_bottom"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone_my_own_app"
                android:id="@+id/button_capstone"
                android:onClick="clickOnBtn"
                android:background="@drawable/custom_button"
                android:textColor="@drawable/button_color"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
